# kalshi-trader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  adapter.py  api.py  backtest_runner.py  cli.py  collector-health.service  collector-health.sh  collector-health.timer  collector.py  collector.service  data_types.py  db.py  docker-compose.yml  evaluator.py  exit_rules.py  feature_actor.py  get_schemas.py  main.py  pyproject.toml  rotate_and_upload.sh  shared_features.py  test_adapter.py  test_api.py  test_backtest_runner.py  test_data_types.py  test_db.py  test_evaluator.py  test_exit_rules.py  test_feature_actor.py  test_live_pollers.py  test_score_parity.py  test_shared_features.py  test_weather_strategy.py  trader.service  weather_strategy.py
archive/: adapter_v1.py  main.py  strategy.py
data/: baseline_results.json  climate_events.parquet  model_signals.parquet  sweep_results.csv  sweep_results.json
docs/: PRD.md
experiments/: exp01_microstructure.py  exp02_depth.py  exp03_model_vs_market.py  exp04_entry_timing.py  exp05_backtest_phased.py  exp05_backtest_sweep.py  exp05_results.txt  exp06_param_sweep.py  exp06_repricing_ab.py  exp06_run_variant.py  tick_loader.py
kalshi/: __init__.py  backtest.py  backtest_loader.py  backtest_results.py  config.py  data.py  execution.py  factories.py  providers.py  sandbox.py  signal_actor.py  signals.py  strategy.py
scripts/: portfolio_dashboard.py  portfolio_status.py  precompute_signals.py  run_backtest.py  run_trader.py  sweep_params.py  thin_catalog.py  validate_backtest.py
tests/: helpers.py  (+22 more)
(+614 files in other folders)
