[project]
name = "kalshi-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "kalshi-python>=2.1.4",
    "nautilus-trader>=1.224.0",
    "pydantic-settings>=2.13.1",
    "websockets>=16.0",
]

[tool.ty.rules]
"unresolved-import" = "ignore"
"unknown-argument" = "ignore"
